Alarm Logic Update

--- a/templates/index.html
+++ b/templates/index.html
@@ -125,7 +125,20 @@
 
         <div class="countdown-area">
             <div class="countdown-timer" id="countdownTimer">00:00</div>
-            <div class="eta-display" id="etaDisplay">CURRENT ETA: --:-- AM</div>
+            <div class="info-bar">
+                <div class="info-item">
+                    <span class="info-label">&#x23F0; ALARM</span>
+                    <span class="info-value" id="infoWake">--:--</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">&#x1F6AA; DEPART</span>
+                    <span class="info-value" id="infoDepart">--:--</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">&#x1F3C1; ARRIVE</span>
+                    <span class="info-value" id="infoArrive">--:--</span>
+                </div>
+            </div>
         </div>
 
         <div class="character-scene" id="characterScene">
